--- a/internals/applications/trino.yaml
+++ b/internals/applications/trino.yaml
@@ -93,8 +93,8 @@ spec:
             connector.name=iceberg
             hive.metastore.uri=thrift://hive-metastore.mdc.ingtra.net:9083
             hive.s3.aws-access-key=trino
-            hive.s3.aws-secret-key=trinouser
-            hive.s3.endpoint=http://minio.mdc.ingtra.net
+            hive.s3.aws-secret-key=trinosecret
+            hive.s3.endpoint=http://s3.seaweedfs.mdc.ingtra.net
             hive.s3.ssl.enabled=false
           postgresql: |
             connector.name=postgresql
