--- a/internals/applications/trino.yaml
+++ b/internals/applications/trino.yaml
@@ -96,6 +96,7 @@ spec:
             hive.s3.aws-secret-key=trinosecret
             hive.s3.endpoint=http://s3.seaweedfs.mdc.ingtra.net
             hive.s3.ssl.enabled=false
+            hive.s3.signer-type=AWSS3V4SignerType
           postgresql: |
             connector.name=postgresql
             connection-url=jdbc:postgresql://postgresql.mdc.ingtra.net:5432/postgres
