--- a/internals/applications/istio.yaml
+++ b/internals/applications/istio.yaml
@@ -37,7 +37,7 @@ spec:
         meshConfig:
           trustDomain: rke.mdc.ingtra.net
         global:
-          hub: harbor.ingtra.net/dockerhub/istio
+          #hub: harbor.ingtra.net/dockerhub/istio
           proxy:
             clusterDomain: rke.mdc.ingtra.net
   destination:
