--- a/istio-ingress-configs/airflow.yaml
+++ b/istio-ingress-configs/airflow.yaml
@@ -9,7 +9,7 @@ spec:
     - name: airflow-webserver
       route:
       - destination:
-          host: airflow-webserver.airflow.svc.cluster.local
+          host: airflow-webserver.airflow.svc.rke.mdc.ingtra.net
           port: 
             number: 8080
   gateways:
