--- a/istio-ingress-configs/argocd.yaml
+++ b/istio-ingress-configs/argocd.yaml
@@ -9,7 +9,7 @@ spec:
     - name: argocd-server
       route:
       - destination:
-          host: argocd-server.argocd.svc.cluster.local
+          host: argocd-server.argocd.svc.rke.mdc.ingtra.net
           port: 
             number: 443
   gateways:
