disable injection for startup task

--- a/internals/applications/cert-manager.yaml
+++ b/internals/applications/cert-manager.yaml
@@ -13,6 +13,9 @@ spec:
       releaseName: cert-manager
       values: |
         installCRDs: true
+        startupapicheck:
+          podAnnotations:
+            sidecar.istio.io/inject: false
   destination:
     server: https://kubernetes.default.svc
     namespace: cert-manager
