use string for annotation

--- a/internals/applications/cert-manager.yaml
+++ b/internals/applications/cert-manager.yaml
@@ -15,7 +15,7 @@ spec:
         installCRDs: true
         startupapicheck:
           podAnnotations:
-            sidecar.istio.io/inject: false
+            sidecar.istio.io/inject: "false"
   destination:
     server: https://kubernetes.default.svc
     namespace: cert-manager
