--- a/internals/applications/prefect.yaml
+++ b/internals/applications/prefect.yaml
@@ -11,18 +11,20 @@ spec:
     repoURL: https://prefecthq.github.io/prefect-helm
     targetRevision: 2023.1.26
     helm:
-      releaseName: kestra
+      releaseName: prefect-orion
       values: |
-        image:
-          repository: harbor.ingtra.net/dockerhub/prefecthq/prefect
-          perfectTag: 2.7.10-python3.11
+        orion:
+          image:
+            repository: harbor.ingtra.net/dockerhub/prefecthq/prefect
+            perfectTag: 2.7.10-python3.11
         postgresql:
-          enabled: false
+          enabled: true
           externalHostname: postgresql.mdc.ingtra.net
           auth:
             database: prefect
             username: prefect
             password: prefect
+          useSubChart: false
   destination:
     server: https://kubernetes.default.svc
     namespace: prefect
