--- a/internals/applications/flyte.yaml
+++ b/internals/applications/flyte.yaml
@@ -13,9 +13,13 @@ spec:
     helm:
       releaseName: prefect-orion
       values: |
+        flyteadmin:
+          service:
+            type: ClusterIP
         datacatalog:
           service:
             type: ClusterIP
+        deployRedoc: true
         common:
           ingress:
             enabled: false
@@ -44,11 +48,26 @@ spec:
             disableSsl: true
             endpoint: s3.seaweedfs.mdc.ingtra.net
         configmap:
-          adminServer:
-            logger:
-              level: 1
-
-          
+          console:
+            CONFIG_DIR: /etc/flyte/config
+            DISABLE_AUTH: "1"           
+          k8s:
+            plugins:
+              k8s:
+                default-cpus: 100m
+                default-memory: 200Mi
+                default-env-vars:
+                  - FLYTE_AWS_ENDPOINT: http://s3.seaseedfs.mdc.ingtra.net
+                  - FLYTE_AWS_ACCESS_KEY_ID: flyte
+                  - FLYTE_AWS_SECRET_ACCESS_KEY: flytesecret              
+          task_logs:
+            plugins:
+              logs:
+                kubernetes-enabled: true
+                kubernetes-template-uri: 'http://localhost:30082/#/log/{{ "{{" }} .namespace {{ "}}" }}/{{ "{{" }} .podName {{ "}}" }}/pod?namespace={{ "{{" }} .namespace {{ "}}" }}'
+        workflow_scheduler:
+          enabled: true
+          type: native
   destination:
     server: https://kubernetes.default.svc
     namespace: flyte
