--- a/internals/applications/trino.yaml
+++ b/internals/applications/trino.yaml
@@ -26,16 +26,14 @@ spec:
           config:
             query:
               maxMemory: 10GB
-              maxMemoryPerNode: 2GB
-            memory:
-              heapHeadroomPerNode: 1GB
+              maxMemoryPerNode: 1GB
         coordinator:
           jvm:
-            maxHeapSize: 3G
+            maxHeapSize: 1G
             gcMethod:
               type: UseShenandoahGC
           additionalJVMConfig: []
-          #  - "-XX:ShenandoahGCHeuristics=compact"
+            - "-XX:ShenandoahGCHeuristics=compact"
           resources:
             requests:
               cpu: 0.1
@@ -55,16 +53,16 @@ spec:
             successThreshold: 1
         worker:
           jvm:
-            maxHeapSize: 3G
+            maxHeapSize: 2G
             gcMethod:
               type: UseShenandoahGC
           additionalJVMConfig: []
-          #  - "-XX:ShenandoahGCHeuristics=compact"
+            - "-XX:ShenandoahGCHeuristics=compact"
           resources:
             requests:
               cpu: 0.1
             limits:
-              cpu: 5
+              cpu: 4
           livenessProbe:
             initialDelaySeconds: 20
             periodSeconds: 10
@@ -97,13 +95,6 @@ spec:
             hive.s3.endpoint=http://s3.seaweedfs.mdc.ingtra.net
             hive.s3.ssl.enabled=false
             hive.s3.signer-type=AWSS3V4SignerType
-          iceberg_old: |
-            connector.name=iceberg
-            hive.metastore.uri=thrift://hive-metastore.mdc.ingtra.net:9083
-            hive.s3.aws-access-key=trino
-            hive.s3.aws-secret-key=trinouser
-            hive.s3.endpoint=http://minio.mdc.ingtra.net
-            hive.s3.ssl.enabled=false
           postgresql: |
             connector.name=postgresql
             connection-url=jdbc:postgresql://postgresql.mdc.ingtra.net:5432/postgres
