ignore spark pod when argocd compares

--- a/spark-streaming/twitter-sampled-tweets.yaml
+++ b/spark-streaming/twitter-sampled-tweets.yaml
@@ -27,3 +27,5 @@ spec:
     memory: "2048m"
     labels:
       version: 3.3.1
+  sparkConf:
+    spark.kubernetes.driver.annotation.argocd.argoproj.io/compare-options: IgnoreExtraneous
