--- a/internals/applications/metallb.yaml
+++ b/internals/applications/metallb.yaml
@@ -15,3 +15,8 @@ spec:
   destination:
     server: https://kubernetes.default.svc
     namespace: metallb
+  ignoreDifferences:
+    - group: apiextensions.k8s.io/v1
+      kind: CustomResourceDefinition
+      jsonPointers:
+        - /spec/conversion/webwook/clientConfig/caBundle
