--- a/internals/applications/metallb.yaml
+++ b/internals/applications/metallb.yaml
@@ -16,7 +16,7 @@ spec:
     server: https://kubernetes.default.svc
     namespace: metallb
   ignoreDifferences:
-    - group: apiextensions.k8s.io/v1
+    - group: apiextensions.k8s.io
       kind: CustomResourceDefinition
       jsonPointers:
         - /spec/conversion/webwook/clientConfig/caBundle
