--- a/internals/applications/metallb.yaml
+++ b/internals/applications/metallb.yaml
@@ -18,5 +18,5 @@ spec:
   ignoreDifferences:
     - group: apiextensions.k8s.io
       kind: CustomResourceDefinition
-      jsonPointers:
-        - /spec/conversion/webwook/clientConfig/caBundle
+      jqPathExpressions:
+        - .spec.conversion.webwook.clientConfig.caBundle
