--- a/internals/applications/querybook.yaml
+++ b/internals/applications/querybook.yaml
@@ -16,9 +16,9 @@ spec:
           replicaCount: 1
           name: worker
           image:
-            repository: harbor.ingtra.net/library/querybook
+            repository: ingtranet/querybook
             pullPolicy: Always
-            tag: 3.4.0
+            tag: 3.18.0
           resources:
             requests:
               memory: 300Mi
@@ -30,9 +30,9 @@ spec:
           replicaCount: 1
           name: scheduler
           image:
-            repository: harbor.ingtra.net/library/querybook
+            repository: ingtranet/querybook
             pullPolicy: Always
-            tag: 3.4.0
+            tag: 3.18.0
           resources:
             requests:
               memory: 200Mi
@@ -44,9 +44,9 @@ spec:
           replicaCount: 1
           name: web
           image:
-            repository: harbor.ingtra.net/library/querybook
+            repository: ingtranet/querybook
             pullPolicy: Always
-            tag: 3.4.0
+            tag: 3.18.0
           service:
             serviceType: ClusterIP
             servicePort: 80
