--- a/istio-ingress-configs/coupang-partners-proxy.yaml
+++ b/istio-ingress-configs/coupang-partners-proxy.yaml
@@ -6,7 +6,7 @@ spec:
   hosts:
     - coupang-partners-proxy.ig.ingtra.net
   http:
-    - name: kibana
+    - name: coupang-partners-proxy
       route:
       - destination:
           host: coupang-partners-proxy.svc.rke.mdc.ingtra.net
