--- a/istio-ingress-configs/kibana.yaml
+++ b/istio-ingress-configs/kibana.yaml
@@ -1,15 +1,15 @@
 apiVersion: networking.istio.io/v1beta1
 kind: VirtualService
 metadata:
-  name: kibana
+  name: opensearch-dashboards
 spec:
   hosts:
-    - kibana.ig.ingtra.net
+    - opensearch-dash.ig.ingtra.net
   http:
-    - name: kibana
+    - name: opensearch-dashboards
       route:
       - destination:
-          host: kibana-kibana.kibana.svc.rke.mdc.ingtra.net
+          host: opensearch-dashboards.opensearch-dashboards.svc.rke.mdc.ingtra.net
           port: 
             number: 5601
   gateways:
