--- a/internals/applications/opensearch-dashboards.yaml
+++ b/internals/applications/opensearch-dashboards.yaml
@@ -8,12 +8,12 @@ spec:
   source:
     chart: opensearch-dashboards
     repoURL: https://opensearch-project.github.io/helm-charts
-    targetRevision: opensearch-dashboards
+    targetRevision: 2.9.1
     helm:
-      releaseName: kibana
+      releaseName: opensearch-dashboards
       values: |
         opensearchHosts: "http://opensearch.mdc.ingtra.net:9200"
         replicaCount: 1
   destination:
     server: https://kubernetes.default.svc
-    namespace: kibana
+    namespace: opensearch-dashboards
