change vault url

--- a/internals/applications/vault-secrets-operator.yaml
+++ b/internals/applications/vault-secrets-operator.yaml
@@ -13,7 +13,7 @@ spec:
       releaseName: vault-secrets-operator
       values: |
         vault:
-          address: http://vault.mdc.ingtra.net:8200
+          address: http://vault.vd.ingtra.net:8200
         environmentVars:
           - name: VAULT_TOKEN
             valueFrom:
