upgrade mlflow to 2.7.1

--- a/internals/applications/mlflow.yaml
+++ b/internals/applications/mlflow.yaml
@@ -12,6 +12,8 @@ spec:
       helm:
         releaseName: mlflow
         values: |
+          image:
+            tag: v2.7.1
           backendStore:
             databaseConnectionCheck: true
             databaseMigration: true
