change mlflow repo

--- a/internals/applications/mlflow.yaml
+++ b/internals/applications/mlflow.yaml
@@ -13,6 +13,7 @@ spec:
         releaseName: mlflow
         values: |
           image:
+            repository: ghcr.io/mlflow/mlflow	
             tag: v2.7.1
           backendStore:
             databaseConnectionCheck: true
