--- a/internals/applications/external-secrets-configs.yaml
+++ b/internals/applications/external-secrets-configs.yaml
@@ -13,4 +13,4 @@ spec:
       recurse: true
   destination:
     server: https://kubernetes.default.svc
-    namespace: external-secrets-configs
+    namespace: external-secrets
