--- a/external-secrets-configs/vault-secret-store.yaml
+++ b/external-secrets-configs/vault-secret-store.yaml
@@ -23,7 +23,7 @@ metadata:
   name: testme
 spec:
   secretStoreRef:
-    name: vault-backend
+    name: vault
     kind: ClusterSecretStore
   dataFrom:
     - extract:
