change secret path

--- a/external-secrets-configs/vault-secret-store.yaml
+++ b/external-secrets-configs/vault-secret-store.yaml
@@ -8,7 +8,7 @@ spec:
   provider:
     vault:
       server: "http://vault.vd.ingtra.net:8200"
-      path: "kv/k8s"
+      path: "kv"
       version: "v2"
       auth:
         tokenSecretRef:
@@ -27,4 +27,4 @@ spec:
     kind: ClusterSecretStore
   dataFrom:
     - extract:
-        key: "testme"
+        key: "k8s/testme"
