--- a/internals/applications/metallb.yaml
+++ b/internals/applications/metallb.yaml
@@ -14,8 +14,8 @@ spec:
   destination:
     server: https://kubernetes.default.svc
     namespace: metallb
-  # ignoreDifferences:
-  #   - group: apiextensions.k8s.io
-  #     kind: CustomResourceDefinition
-  #     jqPathExpressions:
-  #       - .spec.conversion.webwook.clientConfig.caBundle
+  ignoreDifferences:
+    - group: apiextensions.k8s.io
+      kind: CustomResourceDefinition
+      jqPathExpressions:
+        - .spec.conversion.webwook.clientConfig.caBundle
