--- a/internals/applications/metallb.yaml
+++ b/internals/applications/metallb.yaml
@@ -18,4 +18,4 @@ spec:
     - group: apiextensions.k8s.io
       kind: CustomResourceDefinition
       jqPathExpressions:
-        - .spec.conversion.webwook.clientConfig.caBundle
+        - .spec.conversion.webhook.clientConfig.caBundle
