--- a/cert-manager-configs/issuers.yaml
+++ b/cert-manager-configs/issuers.yaml
@@ -1,13 +1,13 @@
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
-  name: letsencrypt
+  name: zerossl
 spec:
   acme:
-    email: mail@ingtra.net
-    server: https://acme-v02.api.letsencrypt.org/directory
+    email: cookieshake.dev@gmail.com
+    server: https://acme.zerossl.com/v2/DV90
     privateKeySecretRef:
-      name: letsencrypt-private-key
+      name: zerossl-private-key
     solvers:
     - dns01:
         cloudflare:
