--- a/cert-manager-configs/issuers.yaml
+++ b/cert-manager-configs/issuers.yaml
@@ -8,10 +8,16 @@ spec:
     server: https://acme.zerossl.com/v2/DV90
     privateKeySecretRef:
       name: zerossl-private-key
+    externalAccountBinding:
+      keyID: PWFc-4NQXzeKeYIrNx8X0g
+      keySecretRef:
+        name: zerossl-eab-credentials
+        key: eab-hmac-key
+      keyAlgorithm: HS256
     solvers:
-    - dns01:
-        cloudflare:
-          email: cookieshake.dev@gmail.com
-          apiTokenSecretRef:
-            name: cloudflare-api-token
-            key: api-token
+      - dns01:
+          cloudflare:
+            email: cookieshake.dev@gmail.com
+            apiTokenSecretRef:
+              name: cloudflare-api-token
+              key: api-token
