--- a/external-secrets-configs/cert-manager.yaml
+++ b/external-secrets-configs/cert-manager.yaml
@@ -3,6 +3,7 @@ apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
   name: cloudfare-api-token
+  namespace: cert-manager
 spec:
   secretStoreRef:
     name: vault
@@ -15,6 +16,7 @@ apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
   name: zerossl-eab-credentials
+  namespace: cert-manager
 spec:
   secretStoreRef:
     name: vault
